--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -14,4 +14,4 @@ jobs:
     - name: python version
       run: python --version
     - name: pip install
-      run: python install -r requirements.txt
+      run: pip install -r requirements.txt
