Update ml_ci_cd.yml python version

--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   ml_ci_cd:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:[3.8]
     steps:
     - uses: actions/checkout@v2
     - name: python version
